Fixed Hamburger overflow

--- a/app/_components/Navigation/HamburgerButton.module.css
+++ b/app/_components/Navigation/HamburgerButton.module.css
@@ -6,6 +6,7 @@
   /* left: 90%; */
   /* transform: translate(-50%, -50%); */
   width: 40px;
+  height: 46px;
   cursor: pointer;
   display: none;
   background-color: transparent;
